crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__explain_tests__query__select_by_pk.snap
---
source: crates/tests/databases-tests/src/postgres/explain_tests.rs
expression: result.details.query
---
EXPLAIN
SELECT
  coalesce(json_agg(row_to_json("%2_universe")), '[]') AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("%3_rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "%1_Album"."Title" AS "Title"
            FROM
              (
                SELECT
                  "%0_Album".*
                FROM
                  "public"."Album" AS "%0_Album"
                WHERE
                  ("%0_Album"."AlbumId" = 35)
              ) AS "%1_Album"
          ) AS "%3_rows"
      ) AS "%3_rows"
  ) AS "%2_universe"
